Fix dark mode button styling

--- a/docs/style/main.css
+++ b/docs/style/main.css
@@ -18,4 +18,7 @@ body {
     border-radius: 3px;
     color: #ffffff;
   }
+  button:active {
+    background-color: #686868;
+  }
 }
